--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^2.4.2",
     "react": "^0.14.8",
     "react-native": "^0.23.1",
+    "react-native-tab-navigator": "^0.3.0",
     "react-native-tabs": "^1.0.6",
     "redux": "^3.5.2"
   }
