--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "^0.23.1",
     "react-native-tab-navigator": "^0.3.0",
     "react-native-tabs": "^1.0.6",
+    "react-native-vector-icons": "^2.0.2",
     "redux": "^3.5.2"
   }
 }
